Bug 63983 - [SNB/IVB/HSW Bisected]Piglit spec_glsl-1.10_execution_built-in-functions_vs-mix-float-float-float fail
Summary: [SNB/IVB/HSW Bisected]Piglit spec_glsl-1.10_execution_built-in-functions_vs-m...
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Matt Turner
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-27 02:03 UTC by lu hua
Modified: 2013-05-03 02:33 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2013-04-27 02:03:39 UTC
System Environment:
--------------------------
Arch:             x86_64
Platform:         Haswell/Ivybridge/Sandybridge
Libdrm:		(master)2.4.44-5-gb3a3a77823ada2eb37233678b5a49efaec9b75cb
Mesa:		(master)542c5b37034a9615924d8b3daf9e23cd11cc1a57
Xserver:(master)xorg-server-1.14.99.1-35-g7ab98bafc9a3426fd40f8ae693430491333ba4fc
Xf86_video_intel:(master)2.21.6-21-g8eaafdb43998b5cdefb20b8098c558fa5decb115
Cairo:		(master)793f8223d4a71f3fc7e74722fb60659e7100a39d
Libva:		(staging)a229ae875816e30d6d5383a197310a083f2caba5
Libva_intel_driver:(staging)5bd630d4ea732818728b0a464f45739c86e08be3 
Kernel:	(drm-intel-nightly) 454d9f1c659b38acdab21b614a98df5c2b0d6e33

Bug detailed description:
-------------------------
It fails on Haswell/Ivybridge/Sandybridge with mesa master branch, and works well on 9.1 branch.
Following cases also fail with same commit:
Piglit:
spec_glsl-1.10_execution_built-in-functions_vs-mix-vec2-vec2-float
spec_glsl-1.10_execution_built-in-functions_vs-mix-vec2-vec2-vec2
spec_glsl-1.10_execution_built-in-functions_vs-mix-vec3-vec3-float
spec_glsl-1.10_execution_built-in-functions_vs-mix-vec3-vec3-vec3
spec_glsl-1.10_execution_built-in-functions_vs-mix-vec4-vec4-float
spec_glsl-1.10_execution_built-in-functions_vs-mix-vec4-vec4-vec4
Ogles2conform:
(GLES20)GL_mix_mix_float_vert_xvary_yconsthalf_aconsthalf.test
(GLES20)GL_mix_mix_vec2_vert_xvary_yconsthalf_aconsthalf.test
(GLES20)GL_mix_mix_vec3_vert_xvary_yconsthalf_aconsthalf.test
Webglc:
conformance/glsl/functions/glsl-function-mix-float.html
conformance/glsl/functions/glsl-function-mix-gentype.html

Bisect shows:0c1d87b0d7e2c9f1ae6e838a8fa7f074557e45f0 is the first bad commit.
commit 0c1d87b0d7e2c9f1ae6e838a8fa7f074557e45f0
Author:     Matt Turner <mattst88@gmail.com>
AuthorDate: Thu Apr 25 11:03:38 2013 -0700
Commit:     Matt Turner <mattst88@gmail.com>
CommitDate: Thu Apr 25 18:27:39 2013 -0700

    i965/vs: Add support for LRP instruction.

    Only 13 affected programs in shader-db, but they were all helped.

    total instructions in shared programs: 368877 -> 368851 (-0.01%)
    instructions in affected programs:     1576 -> 1550 (-1.65%)

    Reviewed-by: Chris Forbes <chrisf@ijw.co.nz>
    Reviewed-by: Eric Anholt <eric@anholt.net>

output:
Probe at (0,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (1,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (2,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (3,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (4,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (5,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (6,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (7,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (8,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (9,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (10,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (11,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (12,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (13,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (14,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
Probe at (15,0)
  Expected: 0.000000 1.000000 0.000000 1.000000
  Observed: 1.000000 0.000000 0.000000 1.000000
PIGLIT: {'result': 'fail' }


Reproduce steps:
----------------
1. xinit
2. ./bin/shader_runner tests/../generated_tests/spec/glsl-1.10/execution/built-\
in-functions/vs-mix-float-float-float.shader_test -auto
Comment 1 Matt Turner 2013-04-28 21:39:14 UTC
Oh, source arguments were reversed. Thanks for the report. I've pushed a fix as sha a8eed0299df3b233a80031ebe86cac785458eade.
Comment 2 lu hua 2013-05-03 02:33:33 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.